Spring MVC - v2 : Controller Integration

--- a/SpringMVC-1/servlet/src/main/resources/application.properties
+++ b/SpringMVC-1/servlet/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 # Check HTTP Request Message with Log
 # Performance degradation may occur, so use it only in the development stage, not in operation.
 logging.level.org.apache.coyote.http11=debug 
+
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
