--- a/SpringMVC-1/springmvc/src/main/resources/application.properties
+++ b/SpringMVC-1/springmvc/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+# Setting total log level ( basic: info )
+logging.level.root=info
+# Setting the hello.springmvc package and its sublog levels
+logging.level.hello.springmvc=debug
