Bean Validation - error code

--- a/SpringMVC-2/validation/src/main/resources/errors.properties
+++ b/SpringMVC-2/validation/src/main/resources/errors.properties
@@ -38,3 +38,24 @@ max= {0} 까지 허용합니다.
 #추가
 typeMismatch.java.lang.Integer=숫자를 입력해주세요.
 typeMismatch=타입 오류입니다.
+
+
+# ======= BeanValidation 메시지 찾는 순서 =======
+# 1. 생성된 메시지 코드 순서대로 messageSource 에서 메시지 찾기
+# 2. 애노테이션의 message 속성 사용 @NotBlank(message = "공백! {0}")
+# 3. 라이브러리가 제공하는 기본 값 사용 공백일 수 없습니다.
+
+NotBlank.item.itemName={0} 공백 X
+#NotBlank.itemName=
+#NotBlank.java.lang.String=
+#NotBlank=
+
+Range.item.price={0}, {2} ~ {1} 허용
+#Range.price
+#Range.java.lang.Integer
+#Range
+
+Max.item.quantity={0}, 최대 {1}
+
+NotNull.price={0} null X
+NotNull.quantity={0} null X
