Bean Validation - Object error

--- a/SpringMVC-2/validation/src/main/resources/errors.properties
+++ b/SpringMVC-2/validation/src/main/resources/errors.properties
@@ -59,3 +59,6 @@ Max.item.quantity={0}, 최대 {1}
 
 NotNull.price={0} null X
 NotNull.quantity={0} null X
+
+ScriptAssert.item={0}, {1}, {2} price * quantity >= 10000
+ScriptAssert=
